# neohookean

./: .gitignore  CMakeLists.txt  README.md
src/: dragon.h  neohookean.cpp
tri2tet/: CMakeLists.txt
tri2tet/src/: bary.cpp  bary.h  tri2tet.cpp
